<resources>
    <string name="app_name">TimeTable</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" >Settings</string>

    <!-- Fragments strings -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_snackbar" translatable="false">Please, select one item.</string>
    <string name="selected" translatable="false">Selected</string>

    <!-- Main Activity strings -->
    <string name="timetable" translatable="false">TimeTable</string>
    <string name="ulan_nurymov_gmail_com" translatable="false">Email@Email.com</string>
    <string name="seven_days_of_the_week" translatable="false">7 Days of the Week</string>
    <string name="subject" translatable="false">Subject</string>
    <string name="field_error" translatable="false">field can not be empty!</string>
    <string name="time_error" translatable="false">Time field can not be empty!</string>
    <string name="week">Week</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website" >School website</string>
    <string name="school_website_snackbar" translatable="false">Please, set URL of your school website in settings.</string>

    <string name="add_subject" translatable="false">Add Timetable</string>
    <string name="edit_subject" translatable="false">Edit Timetable</string>
    <string name="teacher">Contact</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="teacher_dialog">Teacher:</string>
    <string name="room_dialog">Room:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>

    <!-- Homeworks Activity strings -->
    <string name="title_activity_homeworks" translatable="false">HomeworksActivity</string>
    <string name="homeworks">Task</string>
    <string name="select_date">Select date</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="deadline">Deadline</string>
    <string name="description_dialog">Description:</string>
    <string name="desctiption">Desctiption</string>
    <string name="date_error">Date field can not be empty!</string>
    <string name="edit_homework">Edit Task</string>
    <string name="add_homework">Add Task</string>
    <string name="deadline_snackbar" translatable="false">"Deadline field can not be empty!</string>
    <string name="date">Date</string>

    <!-- Notes Activity strings -->
    <string name="notes">Notes</string>
    <string name="title_dialog" translatable="false">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error" translatable="false">Title field can not be empty!</string>
    <string name="title" translatable="false">Title</string>
    <string name="saved">Saved</string>

    <!-- Teachers Activity strings -->
    <string name="teachers">Contacts</string>
    <string name="add_teacher">Add Contact</string>
    <string name="edit_teacher">Edit Contact</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Post:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>

    <!-- Exams Activity strings -->
    <string name="title_activity_exam" translatable="false">ExamActivity</string>
    <string name="exams">Events</string>
    <string name="add_exam">Add Events</string>
    <string name="date_dialog" translatable="false">Date:</string>
    <string name="time_dialog" translatable="false">Time:</string>

    <!-- Settings Activity strings -->
    <string name="sevendays_setting" translatable="false">Enable 7 Days of the Week</string>
    <string name="school_website_setting" translatable="false">Change school website</string>
    <string name="school_website_setting_summary" translatable="false">Change URL of your school website</string>

    <!-- Notification -->
    <string name="notification_title" translatable="false">Today\'s lessons</string>
    <string name="do_not_have_lessons" translatable="false">You do not have lessons!</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="skype" translatable="false">Skype</string>


    <string name="changeLang">Fluid Algorithms is a timetable app with many features it got tabs like events where you can set events like a birthday party or wedding. Contacts you can add all your friends and family details and a task bar where you can put things you need to do. there is a bunch of links.</string>
    <string name="hello">HELLO</string>
    <string name="about_us">About Us</string>
    <string name="events">Events</string>
    <string name="contact">Contact</string>
    <string name="links">Links</string>
    <string name="type_of_event">Type of Event</string>
    <string name="location">Location</string>
    <string name="appointment">Appointment</string>
    <string name="address">Address</string>


</resources>
