<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/schoolwebsitemenu"
            android:icon="@drawable/baseline_open_in_browser_black_18"
            android:title="@string/school_website" />
    </group>

    <group android:id="@+id/menu_mid"
        android:checkableBehavior="none">

        <item
            android:id="@+id/aboutus"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/about_us" />


        <item
            android:id="@+id/exams"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/exams" />

        <item
            android:id="@+id/teachers"
            android:icon="@drawable/baseline_people_black_18"
            android:title="@string/contact" />

        <item
            android:id="@+id/homework"
            android:icon="@drawable/baseline_book_black_18"
            android:title="@string/homeworks" />
        <item
            android:id="@+id/notes"
            android:icon="@drawable/baseline_event_note_black_18"
            android:title="@string/notes" />
<item
        android:id="@+id/links"
        android:icon="@drawable/ic_link_black_24dp"
        android:title="@string/links" />
    </group>

    <group android:id="@+id/menu_down"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_black_18"
            android:title="@string/action_settings" />
    </group>

</menu>
